@@ -12,14 +12,17 @@ use Test::More;
 use File::Flat;
 use Archive::Builder;
 
-# Create our Generator 
+# Create our Generator
 use vars qw{$Generator $Section1 $Section2 $files};
 sub init {
 	$Generator = Archive::Builder->new();
 	$Section1 = $Generator->new_section( 'one' );
 	$Section1->new_file( 'one', 'string', 'filecontents' );
 	my $string = "trivial";
-	$Section1->new_file( 'two', 'string', \$string );
+	my $File   = $Section1->new_file( 'two', 'string', \$string );
+
+	# Set the executable flag to ensure modes are written
+	$File->executable;
 
 	# Write the test file
 	File::Flat->write( 'test.txt', 'test file' );
@@ -29,23 +32,23 @@ sub init {
 	my $handle = File::Flat->getReadHandle( 'test.txt' );
 	$Section1->new_file( 'four', 'handle', $handle );
 
-# Test the file contents
-$files = {
-        './first/one/one'   => 'filecontents',
-        './first/one/two'   => 'trivial',
-        './first/one/three' => "test file",
-        './first/one/four'  => 'test file',
-        };
+	# Test the file contents
+	$files = {
+		'./first/one/one'   => 'filecontents',
+		'./first/one/two'   => 'trivial',
+		'./first/one/three' => "test file",
+		'./first/one/four'  => 'test file',
+	};
 
 }
 init();
 
 
 my %archive_types = (
- 'tar'    => \&test_tar,
- 'tgz'    => \&test_tgz,
- 'tar.gz' => \&test_tar_gz,
- 'zip'    => \&test_zip,
+	'tar'    => \&test_tar,
+	'tgz'    => \&test_tgz,
+	'tar.gz' => \&test_tar_gz,
+	'zip'    => \&test_zip,
 );
 
 # First, identify the types that we can build
@@ -53,21 +56,23 @@ my @types = Archive::Builder::Archive->types;
 
 my $tests = 1;
 foreach ( @types ) {
-  $tests += 3;
-  if ( $archive_types{$_} ) {
-    $tests += 7;
-  } else {
-    diag "No test for type '$_'";
-  }
+	$tests += 3;
+	if ( $archive_types{$_} ) {
+		$tests += 7;
+	} else {
+		diag "No test for type '$_'";
+	}
+	if ( $_ eq 'tar' ) {
+		$tests += 5;
+	}
 }
 foreach my $type (keys %archive_types) {
-  diag "Skipping test of '$type' files due to missing dependency" if ! grep {$_ eq $type} @types
+	diag "Skipping test of '$type' files due to missing dependency" if ! grep {$_ eq $type} @types
 }
 
 plan tests => $tests;
 
 ok( scalar @types, 'You can build at least one type of archive' );
-
 
 # Test the types they have available
 foreach ( @types ) {
@@ -94,7 +99,7 @@ sub test_common {
 	ok( $Archive, 'Builder->archive returns true' );
 	isa_ok( $Archive, 'Archive::Builder::Archive' );
 	is( $Archive->type, $type, "Archive->type is $type" );
-	
+
 }
 
 sub test_tar {
@@ -103,7 +108,7 @@ sub test_tar {
 
 	# Get the generated string
 	my $scalar = $Archive->generate;
-	
+
 	# Does the string match the expected value
 	ok( ref($scalar) eq 'SCALAR', '->generate returns a scalar ref' );
 	ok( ($$scalar =~ /trivial/ and $$scalar =~ /filecontents/), 'Tar file appears to contain the correct stuff' );
@@ -113,10 +118,19 @@ sub test_tar {
 	ok( $Archive->save( 'first' ), '->save returns true' );
 	ok( ! -f 'first', '->save DOESNT create the file "first"' );
 	ok( -f 'first.tar', "->save does create the file 'first.tar'" );
-	file_contains( 'first.tar', $$scalar, '->save seems to save the tar' );	
+	file_contains( 'first.tar', $$scalar, '->save seems to save the tar' );
 
+	# Check to see if the executable file was written with the correct mode
+	my @list = sort {
+		$a->{name} cmp $b->{name}
+	} Archive::Tar->list_archive( 'first.tar', 0, [ 'name', 'mode' ] );
+	is( scalar(@list), 4, 'Found 4 files in the tarball' );
+	is( $list[0]->{name}, 'four', 'Found normal file' );
+	is( $list[0]->{mode}, 0644,   'Found normal mode' );
+	is( $list[3]->{name}, 'two',  'Found executable file' );
+	is( $list[3]->{mode}, 0755,   'Found executable mode' );
 }
-	
+
 sub test_tgz {
 	# Get the Archive
 	my $Archive = $Generator->archive( 'tgz' );
@@ -131,47 +145,47 @@ sub test_tgz {
 
 	# Save the file
 	ok( $Archive->save( 'first' ), '->save returns true' );
-        ok( ! -f 'first', '->save DOESNT create the file "first"' );
-        ok( -f 'first.tgz', "->save does create the file 'first.tgz'" );
-        file_contains( 'first.tgz', $$scalar, '->save seems to save the zipped content' );
+	ok( ! -f 'first', '->save DOESNT create the file "first"' );
+	ok( -f 'first.tgz', "->save does create the file 'first.tgz'" );
+	file_contains( 'first.tgz', $$scalar, '->save seems to save the zipped content' );
 }
 
 sub test_tar_gz {
-        # Get the Archive
-        my $Archive = $Generator->archive( 'tar.gz' );
+	# Get the Archive
+	my $Archive = $Generator->archive( 'tar.gz' );
 
-        # Get  the generated string
-        my $scalar = $Archive->generate;
+	# Get  the generated string
+	my $scalar = $Archive->generate;
 
-        # Does the string match the expected value
-        ok( ref($scalar) eq 'SCALAR', '->generate returns a scalar ref' );
-        ok( $$scalar =~ /^(?:\037\213|\037\235)/, 'Contents appears to be gzipped' );
+	# Does the string match the expected value
+	ok( ref($scalar) eq 'SCALAR', '->generate returns a scalar ref' );
+	ok( $$scalar =~ /^(?:\037\213|\037\235)/, 'Contents appears to be gzipped' );
 	ok( length $$scalar > 160, 'Length appears to be long enough to contain everything' );
 
-        # Save the file
-        ok( $Archive->save( 'first' ), '->save returns true' );
-        ok( ! -f 'first', '->save DOESNT create the file "first"' );
-        ok( -f 'first.tar.gz', "->save does create the file 'first.tar.gz'" );
-        file_contains( 'first.tar.gz', $$scalar, '->save seems to save the zipped content' );
+	# Save the file
+	ok( $Archive->save( 'first' ), '->save returns true' );
+	ok( ! -f 'first', '->save DOESNT create the file "first"' );
+	ok( -f 'first.tar.gz', "->save does create the file 'first.tar.gz'" );
+	file_contains( 'first.tar.gz', $$scalar, '->save seems to save the zipped content' );
 }
 
 sub test_zip {
-        # Get the Archive
-        my $Archive = $Generator->archive( 'zip' );
+	# Get the Archive
+	my $Archive = $Generator->archive( 'zip' );
 
-        # Get  the generated string
-        my $scalar = $Archive->generate;
+	# Get  the generated string
+	my $scalar = $Archive->generate;
 
-        # Does the string match the expected value
-        ok( ref($scalar) eq 'SCALAR', '->generate returns a scalar ref' );
-        ok( $$scalar =~ /^PK/, 'Contents appears to be zipped' );
-        ok( length $$scalar > 400, 'Length appears to be long enough to contain everything' );
+	# Does the string match the expected value
+	ok( ref($scalar) eq 'SCALAR', '->generate returns a scalar ref' );
+	ok( $$scalar =~ /^PK/, 'Contents appears to be zipped' );
+	ok( length $$scalar > 400, 'Length appears to be long enough to contain everything' );
 
-        # Save the file
-        ok( $Archive->save( 'first' ), '->save returns true' );
-        ok( ! -f 'first', '->save DOESNT create the file "first"' );
-        ok( -f 'first.zip', "->save does create the file 'first.zip'" );
-        file_contains( 'first.zip', $$scalar, '->save seems to save the zipped content' );
+	# Save the file
+	ok( $Archive->save( 'first' ), '->save returns true' );
+	ok( ! -f 'first', '->save DOESNT create the file "first"' );
+	ok( -f 'first.zip', "->save does create the file 'first.zip'" );
+	file_contains( 'first.zip', $$scalar, '->save seems to save the zipped content' );
 }
 
 
